[tool.poetry]
name = "arch-patterns-python"
version = "0.1.0"
description = ""
authors = ["gabriel chaves <gabrieloliveirachaves754@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.1.1"
sqlalchemy = "^2.0.29"
requests = "^2.31.0"
flask = "^3.0.3"
setuptools = "^69.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
